test/errors/constants_error/zs/wrong_decimal_constant_error.zs
package wrong_decimal_constant_error;

const int32 WRONG_DECIMAL_CONSTANT = false;
